# ICP-Cpp

./: CMakeLists.txt  LICENSE  README.md
core/: visualizerPoint.cpp  visualizerPoint.hpp
data/: bun045_ascii.pcd  bun090_ascii.pcd  bun270_ascii.pcd  bun315_ascii.pcd  chin_ascii.pcd  ear_back_ascii.pcd  top2_ascii.pcd  top3_ascii.pcd
include/: csvFileCreator.hpp  csvToPointCLoud.hpp  dataLoader.hpp
mainPipeline/: pipeline.cpp  pipeline.hpp
ramka/: Registration.cpp  Registration.hpp
src/: csvFileCreator.cpp  csvToPointCloud.cpp  dataLoader.cpp  dataLogger.cpp  main.cpp
